@@ -31,6 +31,7 @@
 - updated: `headers` argument in `controller.proxy` supports `flags: []` for REQEUST method
 - updated: `.filefs()` and `.filenosql()` supports `download` with `true` (`filename` will be read from NoSQL binary file)
 - updated: `$.done(arg)` argument `@arg` can be `boolean` (response will be as a value) or object/primitive value (`arg` will be as a value)
+- updated: `String.arg(obj, [encode], [def])` added `encode` and `def` arguments
 
 - fixed: error handling in dynamic schemas
 - fixed: CSS variables
